--- a/perber/public/css/semantic.css
+++ b/perber/public/css/semantic.css
@@ -662,7 +662,6 @@
   padding: 0%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
   box-sizing: border-box;
 }
 
@@ -696,7 +695,6 @@ body > .ui.grid {
   padding-right: 1.5%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
   box-sizing: border-box;
   vertical-align: top;
 }
@@ -752,13 +750,13 @@ body > .ui.grid {
   margin-right: 0%;
 }
 
-@media only screen and (max-width: 998px) {
+@media only screen and (max-width: 991px) {
   .ui.page.grid {
     padding: 0% 4%;
   }
 }
 
-@media only screen and (min-width: 998px) {
+@media only screen and (min-width: 992px) {
   .ui.page.grid {
     padding: 0% 8%;
   }
@@ -789,83 +787,115 @@ body > .ui.grid {
 /* Sizing Combinations */
 
 .ui.grid > .row > .one.wide.column,
-.ui.grid > .one.wide.column {
-  width: 6.25% !important;
+.ui.grid > .column.row > .one.wide.column,
+.ui.grid > .one.wide.column,
+.ui.column.grid > .one.wide.column {
+  width: 6.25%;
 }
 
 .ui.grid > .row > .two.wide.column,
-.ui.grid > .two.wide.column {
-  width: 12.5% !important;
+.ui.grid > .column.row > .two.wide.column,
+.ui.grid > .two.wide.column,
+.ui.column.grid > .two.wide.column {
+  width: 12.5%;
 }
 
 .ui.grid > .row > .three.wide.column,
-.ui.grid > .three.wide.column {
-  width: 18.75% !important;
+.ui.grid > .column.row > .three.wide.column,
+.ui.grid > .three.wide.column,
+.ui.column.grid > .three.wide.column {
+  width: 18.75%;
 }
 
 .ui.grid > .row > .four.wide.column,
-.ui.grid > .four.wide.column {
-  width: 25% !important;
+.ui.grid > .column.row > .four.wide.column,
+.ui.grid > .four.wide.column,
+.ui.column.grid > .four.wide.column {
+  width: 25%;
 }
 
 .ui.grid > .row > .five.wide.column,
-.ui.grid > .five.wide.column {
-  width: 31.25% !important;
+.ui.grid > .column.row > .five.wide.column,
+.ui.grid > .five.wide.column,
+.ui.column.grid > .five.wide.column {
+  width: 31.25%;
 }
 
 .ui.grid > .row > .six.wide.column,
-.ui.grid > .six.wide.column {
-  width: 37.5% !important;
+.ui.grid > .column.row > .six.wide.column,
+.ui.grid > .six.wide.column,
+.ui.column.grid > .six.wide.column {
+  width: 37.5%;
 }
 
 .ui.grid > .row > .seven.wide.column,
-.ui.grid > .seven.wide.column {
-  width: 43.75% !important;
+.ui.grid > .column.row > .seven.wide.column,
+.ui.grid > .seven.wide.column,
+.ui.column.grid > .seven.wide.column {
+  width: 43.75%;
 }
 
 .ui.grid > .row > .eight.wide.column,
-.ui.grid > .eight.wide.column {
-  width: 50% !important;
+.ui.grid > .column.row > .eight.wide.column,
+.ui.grid > .eight.wide.column,
+.ui.column.grid > .eight.wide.column {
+  width: 50%;
 }
 
 .ui.grid > .row > .nine.wide.column,
-.ui.grid > .nine.wide.column {
-  width: 56.25% !important;
+.ui.grid > .column.row > .nine.wide.column,
+.ui.grid > .nine.wide.column,
+.ui.column.grid > .nine.wide.column {
+  width: 56.25%;
 }
 
 .ui.grid > .row > .ten.wide.column,
-.ui.grid > .ten.wide.column {
-  width: 62.5% !important;
+.ui.grid > .column.row > .ten.wide.column,
+.ui.grid > .ten.wide.column,
+.ui.column.grid > .ten.wide.column {
+  width: 62.5%;
 }
 
 .ui.grid > .row > .eleven.wide.column,
-.ui.grid > .eleven.wide.column {
-  width: 68.75% !important;
+.ui.grid > .column.row > .eleven.wide.column,
+.ui.grid > .eleven.wide.column,
+.ui.column.grid > .eleven.wide.column {
+  width: 68.75%;
 }
 
 .ui.grid > .row > .twelve.wide.column,
-.ui.grid > .twelve.wide.column {
-  width: 75% !important;
+.ui.grid > .column.row > .twelve.wide.column,
+.ui.grid > .twelve.wide.column,
+.ui.column.grid > .twelve.wide.column {
+  width: 75%;
 }
 
 .ui.grid > .row > .thirteen.wide.column,
-.ui.grid > .thirteen.wide.column {
-  width: 81.25% !important;
+.ui.grid > .column.row > .thirteen.wide.column,
+.ui.grid > .thirteen.wide.column,
+.ui.column.grid > .thirteen.wide.column {
+  width: 81.25%;
 }
 
 .ui.grid > .row > .fourteen.wide.column,
-.ui.grid > .fourteen.wide.column {
-  width: 87.5% !important;
+.ui.grid > .column.row > .fourteen.wide.column,
+.ui.grid > .fourteen.wide.column,
+.ui.column.grid > .fourteen.wide.column {
+  width: 87.5%;
 }
 
 .ui.grid > .row > .fifteen.wide.column,
-.ui.grid > .fifteen.wide.column {
-  width: 93.75% !important;
+.ui.grid > .column.row > .fifteen.wide.column,
+.ui.grid > .fifteen.wide.column,
+.ui.column.grid > .fifteen.wide.column {
+  width: 93.75%;
 }
 
 .ui.grid > .row > .sixteen.wide.column,
-.ui.grid > .sixteen.wide.column {
-  width: 100% !important;
+.ui.grid > .column.row > .sixteen.wide.column,
+.ui.grid > .sixteen.wide.column,
+.ui.column.grid > .sixteen.wide.column {
+  width: 100%;
 }
 
 /*-------------------
@@ -1180,7 +1210,7 @@ body > .ui.grid {
 
 /* Mobile Only */
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   .ui.mobile.only.grid,
   .ui.grid > .mobile.only.row {
     display: block !important;
@@ -1222,7 +1252,7 @@ body > .ui.grid {
 
 /* Tablet Only */
 
-@media only screen and (min-width: 768px) and (max-width: 998px) {
+@media only screen and (min-width: 768px) and (max-width: 991px) {
   .ui.tablet.only.grid,
   .ui.grid > .tablet.only.row {
     display: block !important;
@@ -1253,7 +1283,7 @@ body > .ui.grid {
   }
 }
 
-@media only screen and (max-width: 768px), (min-width: 998px) {
+@media only screen and (max-width: 767px), (min-width: 992px) {
   .ui.tablet.only.grid,
   .ui.grid > .tablet.only.row,
   .ui.grid > .tablet.only.column,
@@ -1264,7 +1294,7 @@ body > .ui.grid {
 
 /* Computer Only */
 
-@media only screen and (min-width: 998px) {
+@media only screen and (min-width: 992px) {
   .ui.computer.only.grid,
   .ui.grid > .computer.only.row {
     display: block !important;
@@ -1295,7 +1325,7 @@ body > .ui.grid {
   }
 }
 
-@media only screen and (max-width: 998px) {
+@media only screen and (max-width: 991px) {
   .ui.computer.only.grid,
   .ui.grid > .computer.only.row,
   .ui.grid > .computer.only.column,
@@ -1310,7 +1340,7 @@ body > .ui.grid {
 
 /* Mobily Only */
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   .ui.two.column.doubling.grid > .row > .column,
   .ui.two.column.doubling.grid > .column,
   .ui.grid > .two.column.doubling.row > .column {
@@ -1386,7 +1416,7 @@ body > .ui.grid {
 
 /* Tablet Only */
 
-@media only screen and (min-width: 768px) and (max-width: 998px) {
+@media only screen and (min-width: 768px) and (max-width: 991px) {
   .ui.two.column.doubling.grid > .row > .column,
   .ui.two.column.doubling.grid > .column,
   .ui.grid > .two.column.doubling.row > .column {
@@ -1461,10 +1491,10 @@ body > .ui.grid {
 }
 
 /*-------------------
-       Stackable
+      Stackable
 --------------------*/
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767px) {
   .ui.stackable.grid {
     display: block !important;
     padding: 0em;
@@ -1588,22 +1618,22 @@ body > .ui.grid {
 /* Text Color */
 
 .ui.menu .item,
-.ui.menu .item > a {
+.ui.menu .item > a:not(.button) {
   color: rgba(0, 0, 0, 0.75);
 }
 
 .ui.menu .item .item,
-.ui.menu .item .item > a {
+.ui.menu .item .item > a:not(.button) {
   color: rgba(30, 30, 30, 0.7);
 }
 
 .ui.menu .item .item .item,
-.ui.menu .item .item .item > a {
+.ui.menu .item .item .item > a:not(.button) {
   color: rgba(30, 30, 30, 0.6);
 }
 
 .ui.menu .dropdown.item .menu .item,
-.ui.menu .dropdown.item .menu .item a {
+.ui.menu .dropdown.item .menu .item a:not(.button) {
   color: rgba(0, 0, 0, 0.75);
 }
 
@@ -1616,14 +1646,14 @@ body > .ui.grid {
   color: rgba(0, 0, 0, 0.85);
 }
 
-.ui.menu .dropdown.item .menu .item a:hover {
+.ui.menu .dropdown.item .menu .item a:not(.button):hover {
   color: rgba(0, 0, 0, 0.85);
 }
 
 /* Active */
 
 .ui.menu .active.item,
-.ui.menu .active.item a {
+.ui.menu .active.item a:not(.button) {
   color: rgba(0, 0, 0, 0.85);
   border-radius: 0px;
 }
@@ -1714,8 +1744,6 @@ body > .ui.grid {
   padding-bottom: 0.55em;
   padding-top: 0.55em;
   font-size: 0.875em;
-  -webkit-box-shadow: none;
-  box-shadow: none;
 }
 
 /*--------------
@@ -1723,11 +1751,12 @@ body > .ui.grid {
 ---------------*/
 
 .ui.menu:not(.vertical) .item > .input {
-  margin-top: -0.83em;
-  margin-bottom: -0.83em;
+  margin-top: -0.85em;
+  margin-bottom: -0.85em;
   padding-top: 0.3em;
   padding-bottom: 0.3em;
   width: 100%;
+  vertical-align: top;
 }
 
 .ui.menu .item > .input input {
@@ -1743,6 +1772,39 @@ body > .ui.grid {
 
 .ui.vertical.menu .ui.input > .icon {
   padding-top: 0.63em;
+}
+
+/* Action Input */
+
+.ui.menu:not(.vertical) .item > .button.labeled > .icon {
+  padding-top: 0.6em;
+}
+
+.ui.menu:not(.vertical) .item .action.input > .button {
+  font-size: 0.8em;
+  padding: 0.55em 0.8em;
+}
+
+/* Resizes */
+
+.ui.small.menu:not(.vertical) .item > .input input {
+  padding-top: 0.4em;
+  padding-bottom: 0.4em;
+}
+
+.ui.large.menu:not(.vertical) .item > .input input {
+  top: -0.125em;
+  padding-bottom: 0.6em;
+  padding-top: 0.6em;
+}
+
+.ui.large.menu:not(.vertical) .item .action.input > .button {
+  font-size: 0.8em;
+  padding: 0.9em;
+}
+
+.ui.large.menu:not(.vertical) .item .action.input > .button > .icon {
+  padding-top: 0.8em;
 }
 
 /*--------------
@@ -1988,7 +2050,7 @@ body > .ui.grid {
   height: 1px;
   background-image: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.03) 0%, rgba(0, 0, 0, 0.1) 1.5em, rgba(0, 0, 0, 0.03) 100%);
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(0, 0, 0, 0.03)), color-stop(1.5em, rgba(0, 0, 0, 0.1)), to(rgba(0, 0, 0, 0.03)));
-  background-image: linear-gradient(left, rgba(0, 0, 0, 0.03) 0%, rgba(0, 0, 0, 0.1) 1.5em, rgba(0, 0, 0, 0.03) 100%);
+  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.03) 0%, rgba(0, 0, 0, 0.1) 1.5em, rgba(0, 0, 0, 0.03) 100%);
 }
 
 .ui.vertical.menu .item:first-child:before {
@@ -2765,7 +2827,7 @@ body > .ui.grid {
 .ui.vertical.inverted.menu .item:before {
   background-image: -webkit-linear-gradient(left, rgba(255, 255, 255, 0.03) 0%, rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0.03) 100%);
   background-image: -webkit-gradient(linear, left top, right top, from(rgba(255, 255, 255, 0.03)), color-stop(50%, rgba(255, 255, 255, 0.1)), to(rgba(255, 255, 255, 0.03)));
-  background-image: linear-gradient(left, rgba(255, 255, 255, 0.03) 0%, rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0.03) 100%);
+  background-image: linear-gradient(to right, rgba(255, 255, 255, 0.03) 0%, rgba(255, 255, 255, 0.1) 50%, rgba(255, 255, 255, 0.03) 100%);
 }
 
 /*--- Hover ---*/
@@ -3054,7 +3116,7 @@ body > .ui.grid {
 
 .ui.menu.fixed {
   position: fixed;
-  z-index: 10;
+  z-index: 999;
   margin: 0em;
   border: none;
   width: 100%;
@@ -3096,6 +3158,12 @@ body > .ui.grid {
   bottom: auto;
   width: auto;
   height: 100%;
+}
+
+/* Coupling with Grid */
+
+.ui.fixed.menu + .ui.grid {
+  padding-top: 2.75rem;
 }
 
 /*-------------------
@@ -3187,11 +3255,6 @@ body > .ui.grid {
   font-size: 0.875rem;
 }
 
-.ui.small.menu:not(.vertical) .item > .input input {
-  padding-top: 0.4em;
-  padding-bottom: 0.4em;
-}
-
 .ui.small.vertical.menu {
   width: 13rem;
 }
@@ -3210,12 +3273,6 @@ body > .ui.grid {
 
 .ui.large.menu .item .item {
   font-size: 0.875rem;
-}
-
-.ui.large.menu:not(.vertical) .item > .input input {
-  top: -0.125em;
-  padding-bottom: 0.6em;
-  padding-top: 0.6em;
 }
 
 .ui.large.menu .dropdown.item .item {
@@ -3390,9 +3447,18 @@ body > .ui.grid {
   box-shadow: 0em 0em 0em 1px rgba(0, 0, 0, 0.1) inset;
 }
 
+.ui.attached + .ui.attached.message:not(.top):not(.bottom) {
+  margin-top: -1px;
+  border-radius: 0em;
+}
+
 .ui.bottom.attached.message {
   margin-top: -1px;
   border-radius: 0em 0em 0.325em 0.325em;
+}
+
+.ui.bottom.attached.message:not(:last-child) {
+  margin-bottom: 1em;
 }
 
 .ui.attached.icon.message {
@@ -3409,7 +3475,7 @@ body > .ui.grid {
   width: 100%;
 }
 
-.ui.icon.message > .icon {
+.ui.icon.message > .icon:not(.close) {
   display: table-cell;
   vertical-align: middle;
   font-size: 3.8em;
@@ -8430,6 +8496,14 @@ i.icon.smile:before {
   content: "\f118";
 }
 
+i.icon.sort.ascending:before {
+  content: "\f0de";
+}
+
+i.icon.sort.descending:before {
+  content: "\f0dd";
+}
+
 i.icon.sort.alphabet.descending:before {
   content: "\f15e";
 }
@@ -8438,20 +8512,12 @@ i.icon.sort.alphabet:before {
   content: "\f15d";
 }
 
-i.icon.sort.ascending:before {
-  content: "\f0de";
-}
-
 i.icon.sort.attributes.descending:before {
   content: "\f161";
 }
 
 i.icon.sort.attributes:before {
   content: "\f160";
-}
-
-i.icon.sort.descending:before {
-  content: "\f0dd";
 }
 
 i.icon.sort.order.descending:before {
@@ -8788,8 +8854,6 @@ i.icon.star {
 
 /* left side icons */
 
-i.icon.left,
-i.icon.left,
 i.icon.left {
   width: auto;
   margin: 0em 0.5em 0em 0em;
@@ -8798,8 +8862,6 @@ i.icon.left {
 /* right side icons */
 
 i.icon.search,
-i.icon.up,
-i.icon.down,
 i.icon.right {
   width: auto;
   margin: 0em 0em 0em 0.5em;
@@ -9298,11 +9360,11 @@ img.ui.image {
 
 /* browsers require these rules separate */
 
-.ui.input::-web inputkit-input-placeholder {
+.ui.input::-webkit-input-placeholder {
   color: #BBBBBB;
 }
 
-.ui.input::-moz input-placeholder {
+.ui.input::-moz-placeholder {
   color: #BBBBBB;
 }
 
@@ -9513,6 +9575,15 @@ img.ui.image {
   vertical-align: top;
 }
 
+.ui.fluid.action.input {
+  display: table;
+  width: 100%;
+}
+
+.ui.fluid.action.input > .button {
+  width: 0.01%;
+}
+
 /*--------------------
         Fluid
 ---------------------*/
@@ -9527,10 +9598,6 @@ img.ui.image {
 
 .ui.mini.input {
   font-size: 0.8125rem;
-}
-
-.ui.tiny.input {
-  font-size: 0.875rem;
 }
 
 .ui.small.input {
@@ -10662,6 +10729,16 @@ a.ui.teal.label:hover:before {
 
 .ui.successful.progress .bar,
 .ui.successful.progress .bar::after {
+  -webkit-animation: none !important;
+  animation: none !important;
+}
+
+.ui.warning.progress .bar {
+  background-color: #E96633 !important;
+}
+
+.ui.warning.progress .bar,
+.ui.warning.progress .bar::after {
   -webkit-animation: none !important;
   animation: none !important;
 }
@@ -11915,7 +11992,6 @@ a.ui.teal.label:hover:before {
 .ui.accordion .accordion {
   width: 600px;
   max-width: 100%;
-  overflow: hidden;
   font-size: 1rem;
   border-radius: 0.3125em;
   background-color: #FFFFFF;
@@ -12529,6 +12605,9 @@ a.ui.teal.label:hover:before {
   min-width: 1em;
   height: 1em;
   border-radius: 500px;
+  -webkit-transform: none;
+  -ms-transform: none;
+  transform: none;
 }
 
 .ui.radio.checkbox .box:after,
@@ -12583,6 +12662,9 @@ a.ui.teal.label:hover:before {
   z-index: 1;
   width: 1.5em;
   height: 1.5em;
+  -webkit-transform: none;
+  -ms-transform: none;
+  transform: none;
   -webkit-box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1) inset;
   box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1) inset;
   border-radius: 50rem;
@@ -12664,6 +12746,9 @@ a.ui.teal.label:hover:before {
   background-color: #FFFFFF;
   width: 3em;
   height: 1.5em;
+  -webkit-transform: none;
+  -ms-transform: none;
+  transform: none;
   -webkit-box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1) inset;
   box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1) inset;
   border-radius: 50rem;
@@ -12755,10 +12840,8 @@ a.ui.teal.label:hover:before {
   opacity: 0;
   line-height: 1;
   -webkit-animation-fill-mode: both;
-  -ms-animation-fill-mode: both;
   animation-fill-mode: both;
   -webkit-animation-duration: 0.5s;
-  -ms-animation-duration: 0.5s;
   animation-duration: 0.5s;
   -webkit-transition: background-color 0.5s linear;
   transition: background-color 0.5s linear;
@@ -12768,7 +12851,6 @@ a.ui.teal.label:hover:before {
   user-select: none;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  -ms-box-sizing: border-box;
   box-sizing: border-box;
   z-index: 1000;
 }
@@ -12810,6 +12892,7 @@ a.ui.teal.label:hover:before {
   overflow: hidden;
 }
 
+.ui.dimmed.dimmable > .ui.animating.dimmer,
 .ui.dimmed.dimmable > .ui.visible.dimmer,
 .ui.active.dimmer {
   display: block;
@@ -14054,6 +14137,7 @@ a.ui.nag {
   visibility: hidden;
 }
 
+.ui.animating.popup,
 .ui.visible.popup {
   display: block;
 }
@@ -15003,6 +15087,7 @@ body.pushed.scrolling.ui.dimmable {
 *******************************/
 
 .ui.animating.transition {
+  display: block;
   -webkit-backface-visibility: hidden;
   -ms-backface-visibility: hidden;
   backface-visibility: hidden;
@@ -15165,7 +15250,7 @@ body.pushed.scrolling.ui.dimmable {
 }
 
 /*--------------
-      Slide
+     Slide
 ---------------*/
 
 .ui.slide.down.transition.in {
@@ -15179,25 +15264,25 @@ body.pushed.scrolling.ui.dimmable {
 .ui.slide.down.transition.out {
   -webkit-animation-name: slideOut;
   animation-name: slideOut;
-  transform-origin: 50% 0%;
-  -ms-transform-origin: 50% 0%;
   -webkit-transform-origin: 50% 0%;
+  -ms-transform-origin: 50% 0%;
+  transform-origin: 50% 0%;
 }
 
 .ui.slide.up.transition.in {
   -webkit-animation-name: slide;
   animation-name: slide;
-  transform-origin: 50% 100%;
-  -ms-transform-origin: 50% 100%;
   -webkit-transform-origin: 50% 100%;
+  -ms-transform-origin: 50% 100%;
+  transform-origin: 50% 100%;
 }
 
 .ui.slide.up.transition.out {
   -webkit-animation-name: slideOut;
   animation-name: slideOut;
-  transform-origin: 50% 100%;
-  -ms-transform-origin: 50% 100%;
   -webkit-transform-origin: 50% 100%;
+  -ms-transform-origin: 50% 100%;
+  transform-origin: 50% 100%;
 }
 
 @-webkit-keyframes slide {
@@ -15265,7 +15350,7 @@ body.pushed.scrolling.ui.dimmable {
 *******************************/
 
 /*--------------
-  Emphasis
+    Emphasis
 ---------------*/
 
 /* Flash */
@@ -15516,13 +15601,13 @@ body.pushed.scrolling.ui.dimmable {
   0% {
     -webkit-transform: rotateY(0deg);
     transform: rotateY(0deg);
-    opacity: 0;
+    opacity: 1;
   }
 
   100% {
     -webkit-transform: rotateY(90deg);
     transform: rotateY(90deg);
-    opacity: 1;
+    opacity: 0;
   }
 }
 
@@ -15531,14 +15616,14 @@ body.pushed.scrolling.ui.dimmable {
     -webkit-transform: rotateY(0deg);
     -ms-transform: rotateY(0deg);
     transform: rotateY(0deg);
-    opacity: 0;
+    opacity: 1;
   }
 
   100% {
     -webkit-transform: rotateY(90deg);
     -ms-transform: rotateY(90deg);
     transform: rotateY(90deg);
-    opacity: 1;
+    opacity: 0;
   }
 }
 
@@ -16570,28 +16655,28 @@ body.pushed.scrolling.ui.dimmable {
   color: rgba(0, 0, 0, 0.5);
 }
 
-.ui.items .item:nth-of-type(n+1):hover {
+.ui.items .item:nth-of-type(6n+1):hover {
   border-bottom-color: #6ECFF5 !important;
 }
 
-.ui.items .item:nth-of-type(n+2):hover {
+.ui.items .item:nth-of-type(6n+2):hover {
   border-bottom-color: #5C6166 !important;
 }
 
-.ui.items .item:nth-of-type(n+3):hover {
+.ui.items .item:nth-of-type(6n+3):hover {
   border-bottom-color: #A1CF64 !important;
 }
 
-.ui.items .item:nth-of-type(n+4):hover {
+.ui.items .item:nth-of-type(6n+4):hover {
   border-bottom-color: #D95C5C !important;
 }
 
-.ui.items .item:nth-of-type(n+5):hover {
-  border-bottom-color: #564F8A !important;
+.ui.items .item:nth-of-type(6n+5):hover {
+  border-bottom-color: #00B5AD !important;
 }
 
-.ui.items .item:nth-of-type(n+6):hover {
-  border-bottom-color: #00B5AD !important;
+.ui.items .item:nth-of-type(6n+6):hover {
+  border-bottom-color: #564F8A !important;
 }
 
 /*******************************
@@ -16765,7 +16850,8 @@ body.pushed.scrolling.ui.dimmable {
   display: table;
 }
 
-.ui.horizontal.items > .item > .image .ui.items > .horizontal.item > .image {
+.ui.horizontal.items > .item > .image,
+.ui.items > .horizontal.item > .image {
   display: table-cell;
   width: 50%;
 }
