--- a/perber/views/themes/default/layout.jade
+++ b/perber/views/themes/default/layout.jade
@@ -29,10 +29,7 @@ html(class="no-js", lang="en")
         script(type="text/javascript",src="/js/libs/modernizr-2.5.3.min.js")
 
         script(type='text/javascript').
-             !function(r,e,a,c,t){r.GoogleAnalyticsObject=a,r[a]||(r[a]=function(){(r[a].q=r[a].q||[]).push(arguments)}),r[a].l=1*new Date(),c=e.createElement("script"),t=e.scripts[0],c.src="//www.google-analytics.com/analytics.js",t.parentNode.insertBefore(c,t)}(window,document,"ga"),ga("create","UA-44986847-1", "perber.com"),ga("send","pageview");
-
-
-    - var body_class = (("undefined" != typeof room) ? 'fancy-theme' : 'home-page')
-    body(class=body_class)
+            !function(r,e,a,c,t){r.GoogleAnalyticsObject=a,r[a]||(r[a]=function(){(r[a].q=r[a].q||[]).push(arguments)}),r[a].l=1*new Date(),c=e.createElement("script"),t=e.scripts[0],c.src="//www.google-analytics.com/analytics.js",t.parentNode.insertBefore(c,t)}(window,document,"ga"),ga("create","UA-44986847-1", "perber.com"),ga("send","pageview");
+    body
         block content
 
