--- a/perber/views/themes/default/templates/chat_tmpl.jade
+++ b/perber/views/themes/default/templates/chat_tmpl.jade
@@ -1,24 +1,11 @@
 script#chat_box(type='text/html')
-    .chat-box(data-id="{{ id }}")
-        {{> chat_box_text }}
+        .chat-box(data-id="{{ id }}", data-retained="{{ retained }}", class="retained_{{ retained }}")
+            {{> chat_box_text }}
 
 script#chat_box_text(type='text/html')
-    p(class="{{ lang }}")
-        | {{ msg }}
-
-        span.time(title="{{ time }}") {{ time }}
-
-script#chat_notice(type='text/html')
-    .notice(data-user="{{ user }}")
-        |  {{ noticeMsg }}
-        span.time(title="{{ time }}") {{ time }}
-
-script#people_box(type='text/html')
-    a(class='{{ status }}', href='#', data-username='{{ nickname }}', data-provider='{{ provider }}')
-        b
-        | {{ nickname }}
-
-
+        p(class="{{ lang }}")
+            | {{ msg }}
+            span.time(title="{{ time }}") {{ time }}
 
 script#loading(type="text/html")
    .loading
@@ -27,7 +14,7 @@ script#loading(type="text/html")
 script#nullbox(type="text/html")
     .nullbox.header.ui.icon
         i.circular.icon.circle
-        空
+        | 空
 
 script#progress(type="text/html")
     .progressWrapper
@@ -38,6 +25,25 @@ script#confirm_template(type='text/html')
         i(class='fa fa-times-circle delete', title='删除')
         i(class='fa fa-minus-circle cancel', title='取消')
 
-
 script#title_template(type='text/html')
     | {{#count}} ({{ count }}) {{/count}} Perber
+
+script#about_content_template(type='text/html')
+    .intro-wrap
+        .intro-wrap-overlay
+        .intro-wrap-content
+            #IntroInner
+                | Perber不是社区，不是微博，不是论坛，不是博客，也不是聊天室。<br>Perber没有注册，没有follow，没有timeline，也没有提醒。<br><br>也许你可以把它想象成一个放置在广场上的黑板，任何人都可以披上隐身斗篷进入这个广场，并在黑板上写字、贴图片，甚至发小广告。同时，你也可以把黑板上的文字、图片清除掉 —— 即：<b>任何人发布的任何信息都可能被任何人删除</b>。
+            .intro-wrap-close
+
+
+script#how2play_content_template(type='text/html')
+    .intro-wrap
+        .intro-wrap-overlay
+        .intro-wrap-content
+            #IntroInner
+                | 还没写完。
+            .intro-wrap-close
+
+
+
