--- a/perber/public/css/perber.css
+++ b/perber/public/css/perber.css
@@ -261,6 +261,7 @@ body{
     position: relative;
     padding: 5px 0;
     min-height: 95px;
+    margin-top: 80px;
 }
 .chat{
     /**/
@@ -320,7 +321,10 @@ body{
     width: auto;
     max-width: 100%;
     height: auto;
-    margin: 0 0 5px 0; 
+    margin: 0 0 5px 0;
+
+    font: 12px "Helvetica Neue",Helvetica,"Lucida Grande","Luxi Sans",Arial,"Hiragino Sans GB",STHeiti,"Microsoft YaHei","Wenquanyi Micro Hei","WenQuanYi Micro Hei Mono","WenQuanYi Zen Hei","WenQuanYi Zen Hei Mono",LiGothicMed;
+    line-height: 1.5;
 }
 
 .chat-box p{
@@ -336,6 +340,9 @@ body{
 
 .chat-box p.cn{
     font-size: 14px;
+}
+.chat-box.retained_1 p.cn{
+    font-size: 12px;
 }
 
 .imgbox{
@@ -579,14 +586,15 @@ body{
 /*===========*/
 
 .chat-input{
-    /*position: fixed;*/
-    /*width: 100%;*/
-    /*top: 0;*/
-    /*left: 0;*/
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
     background: #fff;
     -webkit-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.1);
     -moz-box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.1);
     box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.1);
+    z-index: 2;
 }
 
 .chat-input .ui.form .field{
@@ -617,6 +625,7 @@ body{
     z-index: 1;
     width: 40px;
     height: 80px;
+    z-index: 3;
     /*background-color: #eee;*/
 }
 
