--- a/perber/views/themes/default/templates/chat_tmpl.jade
+++ b/perber/views/themes/default/templates/chat_tmpl.jade
@@ -33,6 +33,8 @@ script#about_content_template(type='text/html')
         .intro-wrap-overlay
         .intro-wrap-content
             #IntroInner
+                #Logo
+                    i(class="fa fa-circle-o")
                 | Perber不是社区，不是微博，不是论坛，不是博客，也不是聊天室。<br>Perber没有注册，没有follow，没有timeline，也没有提醒。<br><br>也许你可以把它想象成一个放置在广场上的黑板，任何人都可以披上隐身斗篷进入这个广场，并在黑板上写字、贴图片，甚至发小广告。同时，你也可以把黑板上的文字、图片清除掉 —— 即：<b>任何人发布的任何信息都可能被任何人删除</b>。
             .intro-wrap-close
 
