--- a/perber/public/css/perber.css
+++ b/perber/public/css/perber.css
@@ -251,7 +251,7 @@ body{
     margin-bottom: 50px;
 }
 #Logo i{
-    font-size: 100px;
+    font-size: 60px;
     font-weight: 100;
 }
 
@@ -556,11 +556,11 @@ body{
 
 .progressWrapper{
     position: absolute;
-    bottom: 0;
+    top: 0;
     left: 0;
     width: 100%;
     height: 5px;
-    border-radius: 0 0 5px 5px;
+    border-radius: 5px 5px 0px 0px;
     overflow: hidden;
 }
 .progressWrapper .progress{
