make perber.js clean. modify #Tips.

--- a/perber/views/themes/default/room.jade
+++ b/perber/views/themes/default/room.jade
@@ -4,9 +4,10 @@ block content
     .wrap
         .content(role="main")
 
-            ul#Tips
+            ul#Tips.active
                 li(id="about")
-                    i(class="fa fa-circle-o", title="这是什么网站？")
+                    i(class="fa fa-circle-o")
+                    span About Perber
 
             .chat-input
                 .ui.form
