--- a/perber/public/css/perber.css
+++ b/perber/public/css/perber.css
@@ -118,7 +118,7 @@ h4,
 h5 {
   font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-weight: 400;
-  letter-spacing: 0;
+  letter-spacing: 1px;
   color:#fff;
 }
 
@@ -224,7 +224,7 @@ a:hover {
 body{
     height: auto;
     /*"Open Sans", "Helvetica Neue"*/
-    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+    font-family: "Helvetica Neue", "Helvetica", "Arial", sans-serif;
     margin: 0px;
     padding: 0px;
     color: #555555;
@@ -232,11 +232,9 @@ body{
     font-weight: 300;
     text-rendering: optimizeLegibility;
     text-align: center;
-    /*background: #bad5d8;*/
     background: #e5e4db;
     font-size: 14px;
-    line-height: 1;
-    /*overflow: hidden;*/
+    line-height: 1px;
     -webkit-font-smoothing: subpixel-antialiased;
 }
 .wrap{
@@ -248,7 +246,7 @@ body{
 
 #Logo{
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 #Logo i{
     font-size: 60px;
@@ -309,7 +307,7 @@ body{
     min-width: 150px;
     max-width: 310px;
     width: 300px;
-    margin: 5px 5px 10px 10px;
+    margin: 5px 5px 5px 10px;
     vertical-align: top;
     font-size: 24px;
     font-weight: 100;
@@ -377,6 +375,7 @@ body{
     color: #999;
     padding-top: 5px;
     font-size: 12px;
+    letter-spacing: 1px;
 }
 
 
@@ -610,7 +609,7 @@ body{
 }
 
 .chat-input .ui.form .field{
-    margin: 0 10px;
+    margin: 0 60px 0 10px;
 }
 .chat-input .ui.form textarea{
     height: 80px;
@@ -632,29 +631,78 @@ body{
 /* Intro */
 #Tips{
     position: fixed;
-    right: 0px;
-    top: 0px;
-    z-index: 1;
+    right: 0;
+    top: -50px;
     width: 40px;
     height: 80px;
+    padding-right: 17px;
     z-index: 3;
-    /*background-color: #eee;*/
+
+    -webkit-transition: top .2s ease;
+    -moz-transition: top .2s ease;
+    -ms-transition: top .2s ease;
+    -o-transition: top .2s ease;
+    transition: top .2s ease;
 }
+/*#Tips.active{
+    top: 0px;
+}*/
 
 #Tips li{
+    position: relative;
     display: block;
     width: 100%;
     height: 40px;
-    line-height: 40px;
+    line-height: 1;
     font-size: 24px;
-}
-
-#Tips li i{
+    text-align: center;
     cursor: pointer;
-    color: #bad5d8;
+    background: #bad5d8;
+    border-radius: 0 0 5px 5px;
 }
-#Tips li i:hover{
-    color: #99c1c6;
+#Tips li i{
+    margin-top: 7px;
+    cursor: pointer;
+    color: #fff;
+}
+#Tips li span{
+    position: absolute;
+    right: 43px;
+    top: 3px;
+    width: 89px;
+    padding: 10px 10px;
+    background-color: #514f47;
+    border-radius: 5px;
+    color: #fff;
+    font-size: 13px;
+    line-height: 1;
+    text-align: center;
+    letter-spacing: 1px;
+}
+#Tips li span:after{
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: -.3em;
+    bottom: auto;
+    left: auto;
+    margin-top: -.3em;
+    margin-left: -.3em;
+    width: .6em;
+    height: .6em;
+    border: 0;
+    background-color: #514f47;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+
+    z-index: 2;
+}
+#Tips li:hover{
+    background-color: #b1cbce;
+}
+#Tips li:hover i{
+    color: #f5f5f5;
 }
 
 /*===========*/
@@ -717,8 +765,8 @@ body{
 
 #IntroInner{
     display: inline-block;
-    padding: 20px;
-    margin-top: -40px;
+    padding: 0 20px;
+    margin-top: -20px;
     vertical-align: middle;
     outline: 0;
     overflow: hidden;
@@ -726,7 +774,7 @@ body{
     max-width: 650px;
     font: 16px "Helvetica Neue",Helvetica,"Lucida Grande","Luxi Sans",Arial,"Hiragino Sans GB",STHeiti,"Microsoft YaHei","Wenquanyi Micro Hei","WenQuanYi Micro Hei Mono","WenQuanYi Zen Hei","WenQuanYi Zen Hei Mono",LiGothicMed;
     color: #514f47;
-    line-height: 2;
+    line-height: 1.78;
     background: none;
     text-align: left;
     /*border-radius: 5px;*/
@@ -746,8 +794,8 @@ body{
     cursor: pointer;
     position: absolute;
     z-index: 3;
-    top: 10px;
-    right: 10px;
+    top: 4px;
+    right: 21px;
     color: #fff;
     font-size: 24px;
     background-color: #cecdc5;
@@ -993,6 +1041,17 @@ Responsive
             right: 10px;
             left: 10px;
         }
+        #Tips li span{
+            padding: 9px 10px 11px 10px
+        }
+        .intro-wrap-content > .intro-wrap-close{
+            width: 40px;
+            height: 40px;
+            border-radius: 0 0 5px 5px;
+            top: 0px;
+            right: 17px;
+            padding-top: 3px;
+        }
     }
 
     @media(min-width: 768px){
@@ -1007,6 +1066,7 @@ Responsive
             left: 12px;
             right: 15px;
         }
+        #Tips li span{color: #fff;}
     }
 
     @media(min-width: 1221px){
@@ -1014,7 +1074,7 @@ Responsive
             padding-left: 0px;
         }
         .chat-box{
-            margin: 5px 5px 10px 12px;
+            margin: 5px 5px 5px 12px;
         }
     }
 
